@@ -3,8 +3,7 @@ Priority: extra
 Maintainer: Debian FreeSmartphone.Org Team <pkg-fso-maint@lists.alioth.debian.org>
 Uploaders: Heiko Stuebner <heiko@sntech.de>, Rico Rommel <rico@bierrommel.de>, Sebastian Reichel <sre@debian.org>
 DM-Upload-Allowed: yes
-Build-Depends: cdbs,
-               debhelper (>= 8.1.3),
+Build-Depends: debhelper (>= 8.1.3),
                dh-autoreconf,
                fso-specs (>= 2011.06.01.1),
                libvala-0.12-dev,
