@@ -1,16 +1,9 @@
 #!/usr/bin/make -f
+%:
+	dh $@ --with quilt --with autoreconf
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/patchsys-quilt.mk
-include /usr/share/cdbs/1/rules/autoreconf.mk
+override_dh_strip:
+	dh_strip --dbg-package=libfso-glib-dbg
 
-DEB_DH_STRIP_ARGS := --dbg-package=libfso-glib-dbg
-DEB_INSTALL_DOCS_ALL =
-
-
-DEB_CONFIGURE_PREFIX=/usr
-
-DEB_DESTDIR = $(CURDIR)/debian/tmp/
-
-
+override_dh_installdocs:
+	dh_installdocs --link-doc=libfso-glib0
