@@ -11,6 +11,7 @@ libfso-glib (2011.06.01.1) unstable; urgency=low
   * add me to uploaders
   * acknowledge NMU uploads (Closes: #631766)
   * add multi-arch support
+  * switch from cdbs to debhelper
 
  -- Sebastian Reichel <sre@debian.org>  Sat, 20 Aug 2011 10:07:48 +0200
 
